--- a/frontend/src/app/@core/application/home/dashboard/dashboard.component.scss
+++ b/frontend/src/app/@core/application/home/dashboard/dashboard.component.scss
@@ -10,4 +10,10 @@
             margin: 2.5rem 0;
         }
     }
+    .details-card-action {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
 }
