--- a/frontend/src/app/@core/application/home/reservations/dialogs/delete-reservation/delete-reservation.component.html
+++ b/frontend/src/app/@core/application/home/reservations/dialogs/delete-reservation/delete-reservation.component.html
@@ -12,7 +12,7 @@
         <p>Tem certeza que deseja cancelar esta reserva?</p>
         <mat-card appearance="outlined">
             <mat-card-header>
-                <mat-card-title> Quarto {{ reservation.room.number }}</mat-card-title>
+                <mat-card-title> Quarto {{ reservation.roomNumber }}</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <p>Hóspede: {{ reservation.guest.personalData?.name }}</p>
