--- a/frontend/src/app/@core/application/home/reservations/dialogs/edit-reservation/edit-reservation.component.html
+++ b/frontend/src/app/@core/application/home/reservations/dialogs/edit-reservation/edit-reservation.component.html
@@ -12,7 +12,7 @@
         <mat-card appearance="outlined">
             <mat-card-header>
                 <mat-card-title>
-                    Quarto {{ reservation.room.number }}
+                    Quarto {{ reservation.roomNumber }}
                     <button mat-icon-button  (click)="editMode = !editMode">
                         <mat-icon>edit</mat-icon>
                     </button>
