--- a/frontend/src/theme/light.scss
+++ b/frontend/src/theme/light.scss
@@ -15,6 +15,7 @@ $theme: mat.define-theme((
         color: (
                 theme-type: light,
                 primary: mat.$azure-palette,
+                tertiary: mat.$blue-palette
         ),
         typography: $typography,
         density: $density
