--- a/frontend/src/app/@core/application/home/home.component.scss
+++ b/frontend/src/app/@core/application/home/home.component.scss
@@ -1,74 +1,59 @@
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    div:nth-child(1) {
-        width: 33%;
-    }
-    div:nth-child(2) {
-       flex-grow: 1;
-    }
-    div:nth-child(3) {
-        width: 33%;
-        display: flex;
-        justify-content: flex-end;
-    }
-}
-
-.sidenav-container {
-    position: absolute;
-    top: 60px;
-    bottom: 60px;
-    left: 0;
-    right: 0;
-}
-
-.sidenav {
+.home-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 75px;
-    overflow: hidden;
-    transition: width 0.5s ease;
-
-    .sidenav-header {
-        height: 5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: .5rem;
-        h4 {
-            text-align: center;
-        }
-    }
-
-    .mat-mdc-list-item {
-        margin: 0.5rem 0;
-        .mat-icon {
-            vertical-align: bottom;
-        }
-        .text {
-            margin-left: .5rem;
-        }
-    }
-
-    .mat-mdc-list-item:first-child {
-        margin-top: 1rem;
-    }
-}
-
-.sidenav:hover {
-    width: 200px;
-}
-
-.ml-adjusted {
-    margin-left: 125px;
-}
-
-.footer {
-    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    .header {
+        position: fixed;
+        z-index: 2;
+        div {
+            display: flex;
+            flex: 1;
+        }
+        div:nth-child(2) {
+            justify-content: center;
+        }
+        div:nth-child(3) {
+            justify-content: flex-end;
+        }
+    }
+    .sidenav-container {
+        margin-top: 64px;
+        flex: 1;
+        .mat-sidenav {
+            div:first-child {
+                display: flex;
+                justify-content: center;
+                margin: 1.5rem 0;
+            }
+            .mat-mdc-list-item {
+                margin: 0.5rem 0;
+                .mat-icon {
+                    vertical-align: bottom;
+                }
+                .text {
+                    margin-left: .5rem;
+                }
+            }
+            .mat-mdc-list-item:first-child {
+                margin-top: 1rem;
+            }
+        }
+        main {
+            margin: 3rem;
+        }
+    }
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+        div:nth-child(1) p {
+            font-size: 0.8rem;
+            font-style: italic;
+            margin-bottom: 0;
+        }
+    }
 }
