--- a/frontend/src/app/@core/application/home/rooms/rooms.component.scss
+++ b/frontend/src/app/@core/application/home/rooms/rooms.component.scss
@@ -3,3 +3,15 @@
     justify-content: center;
     margin-top: 1.5rem;
 }
+
+.room-details {
+    padding: 1rem;
+    .mat-mdc-card-header {
+        margin-bottom: 1.5rem;
+    }
+    .mat-mdc-card-actions {
+        display: flex;
+        justify-content: center;
+        margin-top: 1.5rem;
+    }
+}
