--- a/frontend/src/theme/dark.scss
+++ b/frontend/src/theme/dark.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use '../../node_modules/@angular/material/index' as mat;
+@use '@angular/material' as mat;
 
 $typography: (
     plain-family: 'Varela Round, sans serif',
@@ -15,6 +15,7 @@ $theme: mat.define-theme((
         color: (
                 theme-type: dark,
                 primary: mat.$cyan-palette,
+                tertiary: mat.$orange-palette,
         ),
         typography: $typography,
         density: $density
